# open-rp2040-freertos-lora

./: CMakeLists.txt  LICENSE  README.md  rp2040Make.sh
include/: FreeRTOSConfig.h
myLibraries/: sdCardLibrary.c  sdCardLibrary.h  sx1280ForRp2040.c  sx1280ForRp2040.h
src/: main.c
